# zkdilithium

./: .gitignore  Cargo.toml  LICENSE  README.md
spec/: zkdilithium.py
spec/log/: poseidon_ark.txt  testcase.txt
src/: main.rs
src/starkpf/: air.rs  aux_trace_table.rs  mod.rs  prover.rs
src/utils/: mod.rs  poseidon_23_spec.rs
